Added js file to html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Get Schwifty</title>
     <link rel="icon" type="image/x-icon" href="./Icon/favicon.ico">
+
+    <script src="index.js"></script>
+    <script src="Utils/ImageCutter.js"></script>
+    <script src="Bootstrapper/Bootstrapper.js"></script>
+    <script src="GameLogic/Game.js"></script>
+    <script src="GameLogic/GameFactory.js"></script>
+    <script src="GameLogic/Board.js"></script>
+    <script src="GameLogic/BoardGeneration/BoardFactory.js"></script>
+    <script src="GameLogic/BoardGeneration/MatrixValidator.js"></script>
+    <script src="GameLogic/BoardGeneration/ArrayShuffler.js"></script>
+    <script src="View/GameViewInitizlizer.js"></script>
+    <script src="View/ViewStateMachine.js"></script>
+    <script src="View/View.js"></script>
+    <script src="View/CellInitializer/ImageCellInitializer.js"></script>
+    <script src="View/CellInitializer/NumberCellInitializer.js"></script>
+    <script src="Models/Score.js"></script>
+    <script src="Models/TopScoreTable.js"></script>
 </head>
 <body>
     <div class="menu" id="menu">
