--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Get Schwifty</title>
     <link rel="icon" type="image/x-icon" href="./Icon/favicon.ico">
 
+    <link rel="stylesheet" href="styles.css">
+
     <script src="index.js"></script>
     <script src="Utils/ImageCutter.js"></script>
     <script src="Bootstrapper/Bootstrapper.js"></script>
