--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
         <input type="file"
         id="image" name="image"
         accept="image/png, image/jpeg">
+        <input type="file"
+        id="importedGame" name="importedGame">
     </div>
 
     <div class="top-scores-page" id="topScoresPage">
