Added a gameState class

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="View/CellInitializer/NumberCellInitializer.js"></script>
     <script src="Models/Score.js"></script>
     <script src="Models/TopScoreTable.js"></script>
+    <script src="Models/GameState.js"></script>
 </head>
 <body>
     <div class="menu" id="menu">
@@ -55,7 +56,6 @@
         <div class="board" id="board"></div>
         <button id="exportButton">Export</button>
     </div>
-        
     
     <div class="winning-message" id="winningMessage">
         <div>Congratulations! You Won!</div>
